[gd_scene load_steps=2 format=3 uid="uid://victory_screen_001"]

[ext_resource type="Script" path="res://scripts/ui/victory_screen.gd" id="1"]

[node name="VictoryScreen" type="CanvasLayer"]
process_mode = 3

[node name="Control" type="Control" parent="." groups=["victory_screen"]]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.2, 0.1, 0.85)

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="TitleSpacer" type="Control" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Title" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.5, 1)
theme_override_font_sizes/font_size = 64
text = "NIVEL COMPLETADO"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="TruthsLabel" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Verdades Reveladas: 0 / 0"
horizontal_alignment = 1

[node name="PercentageLabel" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Completado: 0%"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RankLabel" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Rango: S"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="NextLevelButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Siguiente Nivel"

[node name="RetryButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Reintentar Nivel"

[node name="MenuButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Men√∫ Principal"

[node name="Spacer4" type="Control" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/NextLevelButton" to="Control" method="_on_next_level_button_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/RetryButton" to="Control" method="_on_retry_button_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/MenuButton" to="Control" method="_on_menu_button_pressed"]
